--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,4 @@
-main{
-  max-width: 840px;  
-}
+
 aside img{
     width: 200px;
     height: auto;
@@ -8,8 +6,12 @@ aside img{
 }
 
 nav{
-    background-color: blue;
-    padding: 10px;
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
 } 
 nav a{
     color: white;
@@ -26,13 +28,16 @@ aside h2 {
 p{
     padding: 0;
 }
-
-(wildcard){
-    margin: 0%;
-    padding: 0;
-    box-sizing: border-box;
+header, footer {
+  max-width: 840px;
+  margin: 0 auto;
 
 }
+.grid{
+    display: grid;
+    align-items: center;
+}
+
 main img {
     float: right;
     width: 150;
@@ -41,6 +46,9 @@ main img {
 }
 aside{
     width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
     margin: 1rem;
     border: 1PX solid rgba(0,0,0,2); /* 1 */
     padding: 1rem;
@@ -60,6 +68,10 @@ footer{
     padding: 1rem;
     background-color: #ddd;
     color: #000;
+}
+main  {
+    grid-column: 2/3;
+    margin: 1rem;
 }
 aside{
     width: 20em;
