--- a/wwr/styles.css/rafting.css
+++ b/wwr/styles.css/rafting.css
@@ -5,14 +5,13 @@
 }
 
 .hero img {
-  display: block ;
+  display:block-inline ;
   width: 100%;
   height: auto;
 }
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Merriweather:wght@300&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -42,10 +41,62 @@ Fonts are separated by a | */
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
+ font-family: var(--font); 
+}
+a.active{
+  background-color: hotpink;
+}
+a.one:link{
+  color: #ff0000;
+}
+a.hover{
+  background-color: lightgreen;
+}
+a.visited{
+  background-color: cyan;
+}
+a.one:visited{
+  color: #0000ff;
+}
+a.one:hover{
+  color: #ffcc00;
+}
+a.one:visited{
+  color: #0000ff;
+}
+a.link{
+  background-color: yellow;
+}
+.figure_flex{
+  display: flex;
+}
+.flexbox-container{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+.flexbox-item-1{
+  width: 200;
+  margin: 0;
+  border: 3px solid #333;
+  background-color: #dfdfdf;
+}
+h1{
+  color:var(--heading-color);
+  text-align:center
+}
+figcaption{
+  text-align:center;
+}
+.figure_flex{
+  width: 200;
+}
+figure img{
+  width:200px;
+}
+figure{
+  padding:0;
+  margin:9.5px;
 }
 img {
   display: block;
@@ -84,29 +135,8 @@ p {
   margin: 30px auto;
   text-align: center;
 }
-.colors th {
-  background-color: #999;
-}
-.colors td{
-  width: 25%;
-  height: 3em;
-}
-.primary {
-  background-color: var(--primary-color);
-}
-.secondary {
-  background-color: var(--secondary-color);
-}
-.accent1 {
-  background-color: var(--accent1-color);
-}
-.accent2{
-  background-color: var(--accent2-color);
-}
-p.colored {
-  background-color: var(--paragraph-background-color);
-  color: var(--paragraph-color-on-color);
-}
+
+
 nav {
   background-color: var(--nav-background-color);
   line-height: 3em;
@@ -140,50 +170,4 @@ nav a:hover {
     ". . . . top . . ."
     ". left left center1 center2 right right ."
     "page2 page2 . page4 page4 . page3 page3";
-}
-.sitemap > div {
-  text-align: center;
-}
-.sm-home {
-  grid-area: home;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page2 {
-  grid-area: page2;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page3 {
-  grid-area: page3;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page4 {
-  grid-area: page4;
-  background-color: #999;
-  line-height: 3em;
-}
-.top {
-  grid-area: top;
-  border-left: 1px solid;
-}
-.left {
-  grid-area: left;
-  border-top: 1px solid;
-  border-left: 1px solid;
-}
-.center1 {
-  grid-area: center1;
-  border-top: 1px solid;
-}
-.center2 {
-  grid-area: center2;
-  border-top: 1px solid;
-  border-left: 1px solid;
-}
-.right {
-  grid-area: right;
-  border-top: 1px solid;
-  border-right: 1px solid;
 }
