--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,30 +1,10 @@
 
 aside img{
-    width: 200px;
+    float: inline-start;
+    width: 100px;
     height: auto;
 
 }
-.flexbox-container {
-    display: flex;
-}
-
-.flexbox-item {
-    width: 200;
-    margin: 30;
-    border: 3px solid #333;
-    background-color: #1ff34d;
-
-}
-.flexbox-item-1 {
-    min-height: 100;
-}
-.flexbox-item-2 {
-    min-height: 100;
-}
-.flexbox-item-3 {
-    min-height: 100;
-}
-
 
 nav{
     background-color: steelblue;
@@ -36,18 +16,34 @@ nav{
 } 
 nav a{
     color: white;
-    display: flex;
+    display: grid;
     padding: 20px;
+    
 }
+/* class selector*/
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+footer{
+    margin: 15;
+    border-top: 1px solid #0000;
+    text-align: center;
+}
+
+
 aside h2 {
-    postion: relative;
-    top:47px;
+    position: relative;
+    top:4px;
     left: 150 px;
 }
 main{
+    grid-column: 2/3;
     display: flex;
     columns: 1;
-    width: 600px;
     justify-content: space-between;
     height: fit-content;
 }
@@ -55,15 +51,16 @@ main{
 p{
     padding: 0;
 }
-header, footer {
+header, footer,.grid {
   max-width: 840px;
   margin: 0 auto;
-
+  align-items: relative;
+  display: flex;
 }
 .grid{
-    display: flex;
+    display: grid;
     align-items: center;
-
+    grid-template-columns: 1fr 1fr;
 }
 
 main img {
@@ -77,9 +74,11 @@ main img {
     
 }
 aside{
-    width: 20rem;
+    grid-column: 1/2;
+    grid-row: 1/2; 
+    width: 15rem;
     margin: 1rem;
-    border: 1PX solid rgba(0,0,0,2); /* 1 */
+    border: 1PX solid rgba(0,0,0,1); /* 1 */
     padding: 1rem;
     background-color: #eee;
     color: #333;
@@ -87,23 +86,6 @@ aside{
     
 }
 
-footer{
-    margin-top: 15;
-    border-top: 1px solid #000;
-    text-align: center;
-}
+
 /* Class Selector */
-.box{
-    margin: 1rem;
-    border: 1px solid rgba(0,0,0,1);
-    padding: 1rem;
-    background-color: #ddd;
-    color: #000;
-}
 
-
-main  {
-    width:200px;
-    align-content: space-evenly;
-    margin: 1rem;
-}
