--- a/wwr/contact.css
+++ b/wwr/contact.css
@@ -2,6 +2,7 @@
 
 
 
+
 :root{
     -primary-color: #258ea6;
     -secondary-color: #4497a1;
@@ -18,14 +19,10 @@
     --paragraph-color-on-color: #A7BBEC; /* paragraph text on a colored background */ 
     --paragraph-background-color: #604C4A  ;
     --nav-link-color: #000000;
-    --nav-background-color: #D4AC0D;
-    --nav-hover-link-color: white;
+    --nav-background-color: #0b4fa7;
+    --nav-hover-link-color: rgb(228, 11, 11);
     --nav-hover-background-color: #396E94;
   }
-
-
-
- 
 
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
@@ -66,6 +63,17 @@ header {
 }
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
+}
+.navigation {
+    display: flex;
+    list-style-type: none;
+    padding: 13%;
+    align-items: center;
+    text-align-last: right ;
+    bullet: none;
+    button: none;
+    height: 45;
+    align-content: ;
 }
 .figure-flex {
   display: flex;
@@ -173,3 +181,112 @@ nav a:hover {
 }
 
 
+   
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+div {
+    text-align: center;
+    position: relative;
+}
+.class {
+    position: absolute;
+    align-items: self-start;
+
+}
+body {
+  font-family: Merriweather, Georgia, serif;
+  font-size: 1.2em;
+  color: #333;
+  background: #fff;
+}
+header {
+  margin: 0 auto;
+  width: 650px;
+}
+h1 {
+  margin: 1rem;
+  font-size: 1.5em;
+  color: navy;
+  text-align: center;
+}
+form {
+  width: 650px;
+  margin: 0 auto;
+  padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  background-color: #eee;
+  display: grid;
+}
+fieldset {
+  display: grid;
+  background-color: rgb(239, 228, 250);
+  grid-gap: .5rem;
+  margin: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+}
+legend {
+  padding: 0.2rem;
+  color: navy;
+  font-size: 1.3em;
+}
+label, input, button, select, textarea {
+  font-family: Roboto, Arial, sans-serif;
+}
+label {
+  text-align: right;
+  padding-right: 1rem;
+}
+input, select, textarea {
+  padding: 0.5rem;
+  font-size: 1.1rem;
+}
+input[type="checkbox"] {
+  width: 22px;
+  height: 22px;
+  vertical-align: bottom;
+}
+button {
+  margin: 1rem;
+  background-color: navy;
+  color: #fff;
+  border: none;
+  border-radius: .5rem;
+  padding: .75rem;
+  font-size: 1.2rem;
+}
+
+button:hover {
+  background-color: darkgreen;
+}
+p, label {
+    font: 1rem 'Fira Sans' ,sans-serif;
+
+}
+input {
+    margin: 0.4rem;
+}
+footer {
+  margin: 1rem auto 0;
+  width: 650px;
+  text-align: center;
+  font-size: 0.8em;
+  color: #777;
+  border-top: 1px solid #ccc;
+}
+.form-item {
+  display: grid;
+  align-items: center;
+}
+.column1 {
+  grid-template-columns: 3fr 1fr;
+  margin: 0.5rem 0;
+}
+.column2 {
+  grid-template-columns: 1fr 2fr;
+}
