--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -209,4 +209,148 @@ nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+div {
+    text-align: center;
+    position: center;
+}
+.class {
+    position: absolute;
+    align-items: self-start;
+
+}
+body {
+  font-family: Merriweather, Georgia, serif;
+  font-size: 1.2em;
+  color: #333;
+  background: #fff;
+}
+tr{
+  display: center;
+}
+header {
+  margin: 0 auto;
+  width: 650px;
+}
+fieldseta{
+    background-color: black;
+    padding: 30px;
+}
+h1 {
+  margin: 1rem;
+  font-size: 1.5em;
+  color: navy;
+  text-align: center;
+}
+form {
+  width: 650px;
+  margin: 0 auto;
+  padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  background-color: #eee;
+  display: grid;
+}
+fieldset {
+  display: grid;
+  background-color: rgb(239, 228, 250);
+  grid-gap: .5rem;
+  margin: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+}
+main{
+  display: inline-block 0 7 9 8;
+}
+legend {
+  padding: 0.5rem;
+  color: navy;
+  font-size: 1.3em;
+}
+label, input, button, select, textarea {
+  font-family: Roboto, Arial, sans-serif;
+}
+label {
+  text-align: right;
+  padding-right: 1rem;
+}
+input, select, textarea {
+  padding: 0.5rem;
+  font-size: 1.1rem;
+}
+input[type="checkbox"] {
+  width: 22px;
+  height: 22px;
+  vertical-align: bottom;
+}
+button {
+  margin: 1rem;
+  background-color: navy;
+  color: #fff;
+  border: none;
+  border-radius: .5rem;
+  padding: .75rem;
+  font-size: 1.2rem;
+}
+
+button:hover {
+  background-color: darkgreen;
+}
+section {
+  display: grid;
+}
+footer {
+  margin: 1rem auto 0;
+  width: 650px;
+  text-align: center;
+  font-size: 0.8em;
+  color: #777;
+  border-top: 1px solid #ccc;
+}
+.form-item {
+  display: grid;
+  align-items: center;
+}
+.column1 {
+  grid-template-columns: 3fr 1fr;
+  margin: 0.5rem 0;
+}
+.column2 {
+  grid-template-columns: 1fr 2fr;
+}
+th{
+  display: center;
+  margin: auto;
+}
+.col{
+  display: center;
+  margin: auto;
+  border: 2px solid black;
+  border-radius:.5em ;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.3), 0 3px 12px 0 rgba(0, 0, 0, 0.3);
+  text-align: center;
+
+}
+#scope{
+  margin: auto; 
+  
+
+
+
+  display: center;
+}
+#map{
+  display: block;
+  margin: auto; 
+  text-align: center;
+  border: 2px solid black;
+  border-radius:.5em ;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.3), 0 3px 12px 0 rgba(0, 0, 0, 0.3);
+}
+
 
