--- a/week5/poll-form.css
+++ b/week5/poll-form.css
@@ -1,95 +1,175 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-     
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
+
+:root{
+    -primary-color: #258ea6;
+    -secondary-color: #4497a1;
+    -accent1-color: #629F9B;
+    -accent2-color: #9FAF90;
+
+    --heading-font: "Rock Salt";
+    --paragraph-font: Roboto, Helvetica, sans-serif;
+
+    /* these colors below should be chosen from among your palette colors above */
+    --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+    --headline-color-on-color: black; /* headlines on a colored background */ 
+    --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+    --paragraph-color-on-color: #A7BBEC; /* paragraph text on a colored background */ 
+    --paragraph-background-color: #604C4A  ;
+    --nav-link-color: #000000;
+    --nav-background-color: #D4AC0D;
+    --nav-hover-link-color: white;
+    --nav-hover-background-color: #396E94;
+  }
+
+
+
+ 
+
+
+/*  Look around below...but DON'T CHANGE ANYTHING! */
+
 body {
-  font-family: Merriweather, Georgia, serif;
-  font-size: 1.2em;
-  color: #333;
-  background: #fff;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 4em;
+  font-size: 18px;
+  text-align: center;
 }
-e
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 300px;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--heading-font);
+  color: var(--headline-color-on-white);
+}
+h2
+
+section {
+  display: center;
+  pagging: 3rem;
+  
+}
+hr {
+  height: 3px;
+  margin: 35px 0;
+  background: var(--accent1-color);
+}
 header {
-  margin: 0 auto;
-  width: 650px;
+  padding: 1em;
+  text-align: center;
+  color: var(--headline-color-on-color);
+  background-color: var(--paragraph-background-color);
+}
+header > h1, header > h2 {
+  color: var(--headline-color-on-color);
+}
+.figure-flex {
+  display: flex;
 }
 
-h1 {
-  margin: 1rem;
-  font-size: 1.5em;
-  color: navy;
+p {
+  font-family: var(--paragraph-font);
+  color: var(--paragraph-color-on-white);
+  padding: 1em;
+}
+.colors {
+  width: 100%;
+  min-width: 350px;
+  margin: 30px auto;
   text-align: center;
 }
-form {
-  width: 650px;
-  margin: 0 auto;
-  padding: 1rem;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 0.5rem;
-  background-color: #eee;
+.colors th {
+  background-color: #999;
+}
+.colors td{
+  width: 25%;
+  height: 3em;
+}
+.primary {
+  background-color: var(--primary-color);
+}
+.secondary {
+  background-color: var(--secondary-color);
+}
+.accent1 {
+  background-color: var(--accent1-color);
+}
+.accent2{
+  background-color: var(--accent2-color);
+}
+p.colored {
+  background-color: var(--paragraph-background-color);
+  color: var(--paragraph-color-on-color);
+}
+nav {
+  background-color: var(--nav-background-color);
+  line-height: 3em;
+  text-align: center;
+  font-size: 1.2em;
+}
+nav  {
+  list-style-type: none;
+  display: flex;
+}
+nav a {
+  padding:1em;
+  min-width: 120px;
+  text-decoration: none;
+  padding: 10px;
+}
+nav a:link, nav a:visited {
+  color: var(--nav-link-color);
+}
+nav a:hover {
+  color: var(--nav-hover-link-color);
+  background-color: var(--nav-hover-background-color);
+}
+.sitemap {
   display: grid;
+  justify-content: center;
+
+  grid-template-columns: repeat(6, 15%);
+  grid-template-rows: 3em 1.5em 1.5em 3em;
+  grid-template-areas: ". . home home . ."
+    ". . . top . ."
+    ". left left right right ."
+    "page2 page2 . . page3 page3";
 }
-fieldset {
-  display: grid;
-  grid-gap: .5rem;
-  margin: 1rem;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 1rem;
+.sitemap > div {
+  text-align: center;
 }
-legend {
-  padding: 0.5rem;
-  color: navy;
-  font-size: 1.3em;
+.sm-home {
+  grid-area: home;
+  background-color: #ccc;
+  line-height: 3em;
 }
-label, input, button, select, textarea {
-  font-family: Roboto, Arial, sans-serif;
+.sm-page2 {
+  grid-area: page2;
+  background-color: #ccc;
+  line-height: 3em;
 }
-label {
-  text-align: right;
-  padding-right: 1rem;
+.sm-page3 {
+  grid-area: page3;
+  background-color: #ccc;
+  line-height: 3em;
 }
-input, select, textarea {
-  padding: 0.5rem;
-  font-size: 1.1rem;
+.top {
+  grid-area: top;
+  border-left: 1px solid;
 }
-input[type="checkbox"] {
-  width: 22px;
-  height: 22px;
-  vertical-align: bottom;
+.left {
+  grid-area: left;
+  border-top: 1px solid;
+  border-left: 1px solid;
 }
-button {
-  margin: 1rem;
-  background-color: navy;
-  color: #fff;
-  border: none;
-  border-radius: .5rem;
-  padding: .75rem;
-  font-size: 1.2rem;
+.right {
+  grid-area: right;
+  border-top: 1px solid;
+  border-right: 1px solid;
 }
 
-button:hover {
-  background-color: darkgreen;
-}
-footer {
-  margin: 1rem auto 0;
-  width: 650px;
-  text-align: center;
-  font-size: 0.8em;
-  color: #777;
-  border-top: 1px solid #ccc;
-}
-.form-item {
-  display: grid;
-  align-items: center;
-}
-.column1 {
-  grid-template-columns: 3fr 1fr;
-  margin: 0.5rem 0;
-}
-.column2 {
-  grid-template-columns: 1fr 2fr;
-}
+
